# srequests

./: README.md  pyproject.toml  requirements.txt
src/srequests/: srequests.py
src/srequests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
